Changelog for CPAN-Testers-Schema

{{ $NEXT }}

0.018     2017-08-05 12:42:52-05:00 America/Chicago

    [Fixed]

    - Fixed name of "guid" unique constraint on Stats table. By default,
      DBIx::Class uses the name of the table (cpanstats) in the
      constraint name, but this makes it harder for that name to change
      in the future. Now the name of the constraint is just "guid".

    [Added]

    - Allow test reports to be re-processed. If a test report has
      already been processed (based on its guid), the Stats entry will
      be updated.

0.017     2017-08-04 14:06:17-05:00 America/Chicago

    [Fixed]

    - Fixed some POD formatting issues in the Stats result class. Thanks
      @manwar!

    - Added the correct dependency declaration for Data::UUID, which was
      causing Travis tests to fail. Thanks @manwar!

0.016     2017-08-03 21:38:38-05:00 America/Chicago

    [Fixed]

    - Fixed old schema version with incorrect size of field. Since these
      old tables aren't put through an ALTER TABLE process, we can edit
      the original versions without triggering an upgrade. This means we
      can do minor adjustments to match reality without major problems.

0.015     2017-07-08 12:07:35-05:00 America/Chicago

    [Fixed]

    - Fixed test that starts a MySQL server to run JSON pointer tests.
      JSON support was added in MySQL 5.7, and cannot run on any MySQL
      prior to that. Now the tests check that the MySQL is the right
      version before continuing.

0.014     2017-07-06 22:56:21-05:00 America/Chicago

    [Added]

    - Added method to search full test reports for language,
      distribution, and version

0.013     2017-05-26 22:48:55-05:00 America/Chicago

    [Added]

    - Added a method to get the CPAN upload from a test report

0.012     2017-05-14 15:56:39+02:00 Europe/Paris

    [Fixed]

    - Fixed upgrade for brand-new SQLite databases

    [Added]
